[gd_scene load_steps=6 format=3 uid="uid://bq8m7n2qp4r8"]

[ext_resource type="Script" path="res://scripts/ui/dialog_system.gd" id="1_0"]
[ext_resource type="Texture2D" uid="uid://djc266224605w" path="res://assets/textures/dialog2.png" id="2_dialog2"]
[ext_resource type="Texture2D" uid="uid://bndduxhdtpdk4" path="res://assets/textures/Mc1.png" id="3_mc1"]
[ext_resource type="Texture2D" uid="uid://b2vgvvxi1x6p7" path="res://assets/textures/avancarButton.png" id="9_avancar"]
[ext_resource type="Texture2D" uid="uid://bdxesjkyhwbbf" path="res://assets/textures/pularButton.png" id="10_pular"]

[node name="DialogSystem" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.9)

[node name="CharacterContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterPortrait" type="TextureRect" parent="CharacterContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -53.0
offset_right = 261.0
offset_bottom = 247.0
grow_vertical = 2
texture = ExtResource("3_mc1")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="DialogContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -250.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogBox" type="NinePatchRect" parent="DialogContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 157.0
offset_top = -69.0
offset_right = 9.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dialog2")

[node name="DialogContent" type="VBoxContainer" parent="DialogContainer/DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 196.0
offset_top = 132.0
offset_right = -19.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)

[node name="DialogText" type="RichTextLabel" parent="DialogContainer/DialogBox/DialogContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Texto do di√°logo aparece aqui..."
fit_content = true

[node name="ContinuePrompt" type="Label" parent="DialogContainer/DialogBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -388.0
offset_right = -86.0
offset_bottom = -365.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Pressione ENTER"
horizontal_alignment = 2

[node name="SpeakerName" type="Label" parent="DialogContainer/DialogBox"]
layout_mode = 2
offset_left = 150.0
offset_top = 91.0
offset_right = 1014.0
offset_bottom = 130.0
rotation = -0.233423
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 10
theme_override_constants/shadow_offset_x = 10
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 28
text = "Protagonista"

[node name="ContinueButton" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 812.0
offset_top = -296.0
offset_right = 1207.0
offset_bottom = -145.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("9_avancar")
stretch_mode = 5

[node name="SkipButton" type="TextureButton" parent="."]
offset_left = 846.0
offset_top = 5.0
offset_right = 1458.0
offset_bottom = 413.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("10_pular")
stretch_mode = 5

[node name="TypewriterTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.05

[node name="BlinkTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.5
autostart = true

[node name="GhostAnimationTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.4

[node name="MCAnimationTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.4

[node name="WilliamAnimationTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.4
